<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="24dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/promedio_titulo"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginBottom="20dp" />

    <EditText
        android:id="@+id/etNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nombre_hint"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/etNota1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nota1_hint"
        android:inputType="numberDecimal" />

    <EditText
        android:id="@+id/etNota2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nota2_hint"
        android:inputType="numberDecimal" />

    <EditText
        android:id="@+id/etNota3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nota3_hint"
        android:inputType="numberDecimal" />

    <EditText
        android:id="@+id/etNota4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nota4_hint"
        android:inputType="numberDecimal" />

    <EditText
        android:id="@+id/etNota5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nota5_hint"
        android:inputType="numberDecimal" />

    <Button
        android:id="@+id/btnCalcular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_calcular_promedio"
        android:layout_marginTop="20dp" />

    <TextView
        android:id="@+id/tvResultado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/resultado_promedio"
        android:textSize="20sp"
        android:layout_marginTop="20dp" />

    <Button
        android:id="@+id/btnRegresar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/regresar_menu"
        android:layout_marginTop="16dp" />

</LinearLayout>